--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <title>YouTube Comment Finder</title>
     <meta name="description" content="Easily view and search through comments on YouTube videos. Sort by likes, date, and more.">
+    <meta name="google-site-verification" content="bKU44fSh_qecXMHNQw03Io4T6Wb56LyIKxrpM-4q6Y4" />
 </head>
 <body>
     <main class="container mt-5">
